--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
     build:
       context: ./serben-rust
     container_name: 'serben-rust'
+    healthcheck:
+      test: ["CMD", "wget", "-nv", "-t1", "--spider", "http://localhost:8123/*"]
+      interval: 3600s
+      timeout: 60s
+      start_period: 10s
     ## If, instead of traefik, you prefer port forwarding
     # ports:
     #   - 80:8123
